# mini-scheme

./: Cargo.toml  README.md  circular.scm  factorial.scm  infinite-loop.scm
src/: data.rs  env.rs  eval.rs  function.rs  lex.rs  main.rs  object.rs  opt.rs  parse.rs  token.rs  val.rs
src/data/: env.rs  gc.rs  memory.rs  object.rs  ref.rs
src/function/: bool.rs  cmp.rs  display.rs  list.rs  number.rs  procedure.rs  string.rs  symbol.rs
src/object/: content.rs  memory.rs
