[package]
name = "mini-scheme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.56", features = ["backtrace"] }
clap = { version = "3.1.18", features = ["derive"] }
once_cell = "1.11.0"
regex = "1.5.5"
